@@ -24,6 +24,7 @@ import java.io.IOException;
 import java.net.Socket;
 import java.util.Set;
 
+import com.google.common.util.concurrent.MoreExecutors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -71,7 +72,19 @@ public class IncomingStreamingConnection extends Thread implements Closeable
             // The receiving side distinguish two connections by looking at StreamInitMessage#isForOutgoing.
             // Note: we cannot use the same socket for incoming and outgoing streams because we want to
             // parallelize said streams and the socket is blocking, so we might deadlock.
-            StreamResultFuture.initReceivingSide(init.sessionIndex, init.planId, init.description, init.from, socket, init.isForOutgoing, version);
+            StreamResultFuture future = StreamResultFuture.initReceivingSide(init.sessionIndex, init.planId, init.description,
+                                                                             init.from, socket, init.isForOutgoing, version);
+            //register callback only once per StreamResultFuture
+            if (init.isForOutgoing)
+            {
+                future.addListener(new Runnable()
+                {
+                    public void run()
+                    {
+                        group.remove(IncomingStreamingConnection.this);
+                    }
+                }, MoreExecutors.sameThreadExecutor());
+            }
         }
         catch (IOException e)
         {
